Add(profile): make profile stats prettier than on the last commit